--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "@aws-cdk/core": "1.15.0",
+    "@aws-cdk/aws-cloudfront": "1.15.0",
+    "@aws-cdk/aws-iam": "1.15.0",
+    "@aws-cdk/aws-s3": "1.15.0",
     "@types/node": "12.12.7",
     "aws-cdk": "1.15.0",
     "is-valid-domain": "0.0.11",
