--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT License",
   "author": "Aaron Collver",
   "bin": {
-    "aws-static-website": "bin/aws-static-website"
+    "aws-static-website": "bin/aws-static-website",
+    "localhost-static-website": "bin/localhost-static-website"
   },
   "scripts": {
     "deploy": "cdk deploy --app 'npm run deploy-synthesize'",
@@ -20,7 +21,8 @@
     "@aws-cdk/aws-iam": "1.15.0",
     "@aws-cdk/aws-route53": "1.15.0",
     "@aws-cdk/aws-route53-targets": "1.15.0",
-    "@aws-cdk/aws-s3": "1.15.0"
+    "@aws-cdk/aws-s3": "1.15.0",
+    "express": "4.17.1"
   },
   "devDependencies": {
     "@types/node": "12.12.7",
