Publish files to S3
- Duplicates foo/index.html as foo (instead of relying on S3 website
hosting)
- Doesn't delete files from S3 (a true sync)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "CommonJS",
     "outDir": "dist",
     "target": "ES2018"
   },
